# hass-ufh-controller

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: checks.yml  lint.yml  validate.yml
config/: configuration.yaml
custom_components/ufh_controller/: __init__.py  api.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  data.py  device.py  entity.py  icons.json  manifest.json  recorder.py  select.py  sensor.py  strings.json  switch.py  timestamp_coordinator.py
custom_components/ufh_controller/core/: __init__.py  controller.py  ema.py  history.py  hysteresis.py  pid.py  zone.py
custom_components/ufh_controller/translations/: en.json
docs/: architecture.md  config_flow.md  configuration.md  control_algorithm.md  entities.md  failure-analysis.md  fault_isolation.md  index.md  operation_modes.md  review.md  specification.md  tasmota.md
scripts/: develop  lint
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_controller.py  test_coordinator_failure.py  test_coordinator_persistence.py  test_coordinator_timing.py  test_entity_unavailability.py  test_history.py  test_init.py  test_pid.py  test_select.py  test_sensor.py  test_switch.py  test_valve_sync.py  test_zone.py  test_zone_initial_state.py
tests/config/: __init__.py  test_config_flow_options.py  test_config_flow_user.py  test_config_flow_zone.py  test_entity_unavailability.py  test_init.py
tests/integration/: __init__.py  test_binary_sensor.py  test_climate.py  test_controller.py  test_controller_modes.py  test_select.py  test_sensor.py  test_switch.py  test_zone_evaluation.py  test_zone_flush.py  test_zone_models.py
tests/scenarios/: __init__.py  test_coordinator_failure.py  test_coordinator_persistence.py  test_coordinator_state_tracking.py  test_coordinator_updates.py  test_ema_filtering.py  test_valve_sync.py  test_zone_initial_state.py
tests/unit/: __init__.py  test_const.py  test_ema.py  test_flush_request.py  test_history.py  test_hysteresis.py  test_pid.py  test_zone_failure.py
